# VAD_Emotion_Control_in_Visual_Art_Captioning

./: .gitignore  LICENSE  README.md  pyproject.toml
src/analysis/: embed_sentences.py  finetune_bert_with_emobank.py  isomap.py
src/callback/: generate_sentences.py
src/datamodule/: data.py  datamodule_artemis.py
src/model/: club.py  poe_vad_vae.py  transformer_based_adapter.py  vad_vae.py  vae_model_base.py
src/train/: train.py
