[project]
name = "vad-image-captioning"
version = "0.1.0"
description = "Implementation code of VAD Emotion Control in Visual Art Captioning via Disentangled Multi-modal Representatio."
authors = [
    { name = "Ryo Ueda", email = "ryoryoueda@is.s.u-tokyo.ac.jp" }
]
dependencies = [
    "torch>=2.1.1",
    "transformers>=4.35.2",
    "numpy>=1.24.4",
    "lightning>=2.1.2",
    "loguru>=0.7.2",
    "isort>=5.12.0",
    "black[jupyter]>=24.2.0",
    "pydantic>=2.5.2",
    "pandas>=2.0.3",
    "polars>=0.19.19",
    "pillow>=10.1.0",
    "typed-argument-parser>=1.9.0",
    "sentencepiece>=0.2.0",
    "ipykernel>=6.29.2",
    "matplotlib>=3.7.5",
    "nltk>=3.8.1",
    "scikit-learn>=1.3.2",
    "ipywidgets>=8.1.2",
    "jupyter>=1.0.0",
    "scipy>=1.10.1",
    "sacrebleu>=2.4.1",
    "pycocoevalcap>=1.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
